* quitado seguimiendo package_lock.json

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,9 @@ Codapli-Lemac/out-tsc
 
 # dependencies
 Codapli-Lemac/node_modules
+Codapli-Lemac/package-lock.json
 Codapli-LemacAPI/node_modules
+
 
 # IDEs and editors
 Codapli-Lemac/.idea
