--- a/Codapli-Lemac/package.json
+++ b/Codapli-Lemac/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.config.json",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
@@ -23,8 +23,10 @@
     "@angular/router": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.8",
     "bootstrap": "^4.1.1",
-    "font-awesome": "^4.7.0",
+    "chart.js": "^2.7.2",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
+    "ng4-loading-spinner": "^1.1.3",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
