--- a/Codapli-Lemac/package.json
+++ b/Codapli-Lemac/package.json
@@ -28,6 +28,7 @@
     "font-awesome": "^4.7.0",
     "ng4-loading-spinner": "^1.1.3",
     "rxjs": "^5.5.6",
+    "socket.io": "^2.1.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
