--- a/Codapli-Lemac/package.json
+++ b/Codapli-Lemac/package.json
@@ -29,7 +29,8 @@
     "ng4-loading-spinner": "^1.1.3",
     "rxjs": "^5.5.6",
     "socket.io": "^2.1.0",
-    "zone.js": "^0.8.19"
+    "zone.js": "^0.8.19",
+    "ngx-toastr": "^8.7.3"
   },
   "devDependencies": {
     "@angular/cli": "1.6.7",
