--- a/Codapli-LemacAPI/package.json
+++ b/Codapli-LemacAPI/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
-    "socket.io": "^2.1.0",
-    "state-machine": "^1.0.3"
+    "socket.io": "^2.1.0"
   },
   "devDependencies": {
     "javascript-state-machine": "^3.0.1",
