* Agregado para integrar todo

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ Codapli-Lemac/out-tsc
 Codapli-Lemac/node_modules
 Codapli-Lemac/package-lock.json
 Codapli-LemacAPI/node_modules
+Codapli-LemacAPI/public
 
 
 # IDEs and editors
