--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,7 @@ Codapli-LemacAPI/!.vscode/tasks.json
 Codapli-LemacAPI/!.vscode/launch.json
 Codapli-LemacAPI/!.vscode/extensions.json
 Codapli-LemacAPI/ensayos/*
-
+Codapli-LemacAPI/public/*
 # misc
 Codapli-Lemac/.sass-cache
 Codapli-Lemac/connect.lock
