--- a/Codapli-Lemac/package.json
+++ b/Codapli-Lemac/package.json
@@ -24,10 +24,12 @@
     "@angular/platform-browser-dynamic": "^5.2.11",
     "@angular/router": "^5.2.11",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.8",
+    "@types/moment": "^2.13.0",
     "bootstrap": "^4.1.1",
     "chart.js": "^2.3.0",
     "core-js": "^2.5.7",
     "font-awesome": "^4.7.0",
+    "moment": "^2.22.2",
     "ng4-loading-spinner": "^1.1.3",
     "ngx-toastr": "^8.7.3",
     "rxjs": "^5.5.11",
