--- a/Codapli-LemacAPI/package.json
+++ b/Codapli-LemacAPI/package.json
@@ -4,7 +4,8 @@
   "description": "Proyecto de lectura maquina de ensayos de hormigon",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": " nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +13,8 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "moment": "^2.22.2",
+    "nodemon": "^1.18.6",
+    "pdfkit": "^0.8.3",
     "socket.io": "^2.1.1"
   },
   "devDependencies": {
