--- a/Codapli-Lemac/package.json
+++ b/Codapli-Lemac/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^5.2.11",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.8",
     "@types/moment": "^2.13.0",
+    "angular-sticky-plugin": "^0.5.0",
     "bootstrap": "^4.1.1",
     "chart.js": "^2.3.0",
     "core-js": "^2.5.7",
