--- a/Codapli-Lemac/package.json
+++ b/Codapli-Lemac/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^4.1.1",
     "chart.js": "^2.3.0",
     "core-js": "^2.5.7",
+    "file-saver": "^2.0.1",
     "font-awesome": "^4.7.0",
     "moment": "^2.22.2",
     "ng4-loading-spinner": "^1.1.3",
