Ajustes de muestreo de datos: jobs y seteo de componentes

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ Codapli-Lemac/node_modules
 Codapli-Lemac/package-lock.json
 Codapli-LemacAPI/node_modules
 Codapli-LemacAPI/public
+Codapli-LemacAPI/ensayos
 
 
 # IDEs and editors
