--- a/Codapli-Lemac/package.json
+++ b/Codapli-Lemac/package.json
@@ -31,6 +31,7 @@
     "core-js": "^2.5.7",
     "file-saver": "^2.0.1",
     "font-awesome": "^4.7.0",
+    "material-design-icons": "^3.0.1",
     "moment": "^2.22.2",
     "ng4-loading-spinner": "^1.1.3",
     "ngx-toastr": "^8.7.3",
