--- a/Codapli-LemacAPI/package.json
+++ b/Codapli-LemacAPI/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "ml": "^5.0.0",
+    "ml-regression-simple-linear": "^2.0.2",
     "moment": "^2.22.2",
     "nodemon": "^1.18.6",
     "pdfkit": "^0.8.3",
